# embargo

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  SIGNALS.md  compose.prod.yml  docker-compose.yml
engine/: Cargo.toml  Dockerfile
engine/.sqlx/: query-05db94078aed64d548b739a4fea60faa7caa548ffcb70c03cbc1aec5c181f7c3.json  query-1cff0e28a5faf304689491cd05329f1e063942f8780de32354f9e385e3e99fc7.json  query-1e666c159c08adb6cb3472fff6d7724593e7adf1395bd82fb68e1eb7726157ee.json  query-1ef0fbe4879490031035897d2cff6a6121cb91f29775fc7078f76aa7a7096e55.json  query-2554fc6a2178426262bd8735f4a83f31b47dc23bc6608df92552aa6a9fb9dc2b.json  query-2720837f0cc2e39727dd98a73206c5ef7e3ae460c088f099776049bbb01252a1.json  query-28122192dce2a4c1d157186972e7c3b6de7655fdd2b0d40ed3d494e39ea5d678.json  query-2924c88974ffe319557f3820e36a31fa551f45944b988710f1b43e2c7c5e641b.json  query-2c713a41bc82700d49f53a48ac27ff84b7e0eeb3491b3c9c2e830a024b54687b.json  query-36a1f27eb7e7c5cff3ed272f6dcd8b1b0ea77e92f058759a7e892fbac34408bc.json  query-3d9a1b19c7e00e330c22a40255667c103fc6a748183bc98fc3e70015740fd109.json  query-3fc9932fc53db76423cbcf52fe2aaf96ef18264581df852825156f00542890f4.json  query-49f0a51ba89072993bb781f4dc3b35fad977585b57e6d259110e7252e43f69d6.json  query-4a776600de466cece084a9d0aaa11cd84c9fcfdb5ae64949da8e9838f79f11c3.json  query-59113c2e7524568f1018a27400ef01b91d74a253062d678563baa553cfef11da.json  query-5b87945c9b2136431c1f193428aec6392289205eea38443ab7682f78291204c9.json  query-5c67d1b4f58f5dee62b0389ea454b66a36f0a786c654edb2602a4455eb0037ed.json  query-5ce1f9361e561d6d0a236a56e7f412b2e9b71ee54a2448825fa5aeaab196eed4.json  query-5e03d3bcbeaa7467d06611b59c5b0aa854ae48a60b9248a00c726a37ba98e126.json  query-5ee7dea71747a7fe889d97971e1b10be757c1c7632f6b8f2d8498ba3ecff9f64.json  query-5fb4545d8fc1e33a2a5450927507e3eb40c8f6d058fdbfdcddd9e6e9bed11235.json  query-6d15a3ed178afa05995447972186a9dd0ccdda69ca35f5603371bcb495bc9b12.json  query-6d61560a0d176232d547968959bd69ff9c14dbdd63aef7145867412fd6e427d8.json  query-71b72371bb149af68364b01ab001f5812f0800842933e3a4da43f32a4e2ec120.json  query-7740857eaad13a2922d373cdbc619d8109e1344d96bc3c6a75ba5070c130f4f0.json  query-7845f547330dd2230b08e2bff6621a2b52a27992c2b054ac76b9b9b281982c55.json  query-7bf4d90f9e6f0c1711617fe0dfce9522fa5b4f0d3872f82ce3dbce30024d3553.json  query-7e52b1c1432338e0b41e6ba127b8f11b17e7c92eacc79be898a6b202de8ef428.json  query-7fbe87d4dfb0cdf73ef27881511d18b5ed50c0626c74412e31613fea0840e640.json  query-8527b556f74ff6827a09fea252100d73d260c3e1299b88c18b6bcb4bf8999f69.json  query-9555880fa3a5806700039403c39367ace3b01a682dfc7a4349d1f72354a1639a.json  query-9901dc86d977728f21b8bf2e612db62c00c550a805f3ac72224185479bc38df0.json  query-9c4703c4188c20c1b97494bf27b85a51286f4f25d3efc54ae309e39ea63a693f.json  query-9def1ed5510ded9990b8d6ae6865702be68c0a331fb08b73d0d4fc95ae666a26.json  query-a7a0dd8b9cdb9f569f8340c1621fcafc67408f92ca1bf53c35399109252f9220.json  query-ab05844c8aee209da8097c7ac2172c7ee9297ab5d19413d30f5a42018cce044a.json  query-aead99ec5308334f092209305cd6266ca053f03ee7d16b69e426fbc0a8eb9174.json  query-b1107e00fdbb9f03a6fb5fc61912cd3da8fdc37715a0362c6302753d84a515fc.json  query-b4abb9a776c5d8e849e5a0f818a3c5b68423d30baff2f4b67a79da58a7f1f60b.json  query-b5cc798dc28001e286056d523dbf2d47046a994132c931ee8839a92f6e4a423a.json  (+18 more)
engine/crates/embargo-core/: Cargo.toml
engine/crates/embargo-core/src/: audit.rs  lib.rs  policy.rs  scoring.rs  types.rs
engine/crates/embargo-core/tests/: fixtures.rs
engine/crates/embargo-engine/: Cargo.toml  build.rs
engine/crates/embargo-engine/src/: advisory.rs  auth.rs  cache.rs  config.rs  extractor.rs  feeds.rs  http.rs  main.rs  observability.rs  provenance.rs  registry.rs  tarball.rs  testutil.rs  tracker.rs
engine/fixtures/: README.md
engine/fixtures/binding_gyp/benign/: package.json
engine/fixtures/binding_gyp/benign_prior/: binding.gyp  package.json
engine/fixtures/binding_gyp/malicious/: binding.gyp  index.js  package.json
engine/fixtures/binding_gyp/malicious_prior/: index.js  package.json
engine/fixtures/stealer_chain/benign/: index.js  package.json
engine/fixtures/stealer_chain/benign_prior/: package.json
engine/migrations/: 0001_initial.sql  0002_provenance.sql  0003_watchlist.sql  0004_known_malicious.sql  0005_known_malicious_ecosystem.sql  0006_feed_sources.sql  0007_approval_sod.sql
engine/proto/: embargo.proto
sandbox/: Cargo.toml  Dockerfile  README.md  build.rs
sandbox/src/: allowlist.rs  chain.rs  main.rs  report.rs  runner.rs  seccomp.rs
sandbox/tests/: containment.rs
(+144 files in other folders)
