[workspace]
resolver = "2"
members = [
    "crates/embargo-core",
    "crates/embargo-engine",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Embargo Contributors"]
repository = "https://github.com/berkotako/embargo"

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# errors
thiserror = "2"
anyhow = "1"

# logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# gRPC / protobuf
tonic = { version = "0.13", features = ["transport", "codegen", "prost", "tls-ring", "tls-native-roots"] }
tonic-build = "0.13"
prost = "0.13"
prost-types = "0.13"

# database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono", "json", "migrate"] }

# redis
redis = { version = "0.28", features = ["tokio-comp", "connection-manager"] }

# glob matching
globset = "0.4"

# OpenTelemetry
opentelemetry = { version = "0.28" }
opentelemetry-otlp = { version = "0.28", features = ["tonic"] }
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
tracing-opentelemetry = "0.29"

# metrics
prometheus = { version = "0.13", features = ["process"] }

# time
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }

# config
config = "0.15"

[profile.release]
lto = "thin"
codegen-units = 1
