[package]
name = "embargo-sandbox"
description = "L3 Containment — namespaced, egress-controlled install runner."
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "embargo-sandbox"
path = "src/main.rs"

[dependencies]
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
nix = { version = "0.29", features = ["process", "sched", "mount", "user", "signal", "fs", "socket", "uio", "resource"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

# ReportEvent gRPC client to the engine
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net"] }
tonic = { version = "0.13", features = ["transport", "tls-ring", "tls-native-roots"] }
prost = "0.13"
prost-types = "0.13"

[build-dependencies]
tonic-build = "0.13"

[profile.release]
lto = "thin"
