[package]
name = "embargo-engine"
description = "I/O shell: gRPC server, Postgres, Redis, advisory feeds."
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "embargo-engine"
path = "src/main.rs"

[dependencies]
embargo-core = { path = "../embargo-core" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
config = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }
prometheus = { workspace = true }

# TLS
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"

# SHA-256 for hash-chaining
sha2 = "0.10"
hex = "0.4"

# HTTP server for metrics/health endpoints
axum = { version = "0.8", features = ["tokio"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# Signal extractor: registry client + tarball parsing
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
flate2 = "1"
tar = "0.4"
async-trait = "0.1"
base64 = "0.22"

[build-dependencies]
tonic-build = { workspace = true }
